--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+@import url("style/header.css");
+
+
 :root{
     --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
     
 }
 
@@ -7,6 +11,4 @@ body{
     background-color: var(--cor-de-fundo);
 }
 
-h1{
-    background-color: white;
-}
+
