--- a/style/header.css
+++ b/style/header.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .container{
@@ -26,8 +27,10 @@
 
 .lista-menu{
     display: none;
+    position: absolute;
+    top: 100%;
 }
 
-.container__botao:checked~.lista-menu{
+.container__botao:checked ~ .lista-menu{
     display: block;
 }
