Edição da caixa hamburguer

--- a/style/header.css
+++ b/style/header.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 .cabecalho{
     background-color: var(--branco);
     display: flex;
@@ -29,8 +32,36 @@
     display: none;
     position: absolute;
     top: 100%;
+    background-color: var(--branco);
+    width: 60vw;
 }
 
 .container__botao:checked ~ .lista-menu{
     display: block;
+}
+
+.lista-menu__titulo{
+    font-family: var(--fonte-primaria);
+    font-size: 1em;
+    font-weight: 700;
+    color: var(--cor-primaria);
+    
+}
+
+.lista-menu__item{
+    font-family: var(--fonte-primaria);
+    font-size: 1em;
+    font-weight: 400;
+    padding: 1em;
+    
+}
+
+.lista-menu__link{
+    background: var(--azul-gradiente);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-decoration: none;
+    text-transform: uppercase;
+
 }
