--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
 :root{
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
+    --fonte-primaria: "Poppins", sans-serif;
+    --cor-primaria: #EB9B00;
+    --azul-gradiente: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
     
 }
 
