--- a/style/header.css
+++ b/style/header.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 
 .cabecalho{
     background-color: var(--branco);
@@ -40,18 +38,18 @@
     display: block;
 }
 
+
+/* .container__botao:checked ~.container__imagem{
+    background: linear-gradient(160deg, #002f52 0%, #326589 100%);
+} */
+
 .lista-menu__titulo{
-    font-family: var(--fonte-primaria);
-    font-size: 1em;
     font-weight: 700;
-    color: var(--cor-primaria);
+    color: var(--cor-laranja);
     
 }
 
 .lista-menu__item{
-    font-family: var(--fonte-primaria);
-    font-size: 1em;
-    font-weight: 400;
     padding: 1em;
     
 }
@@ -65,3 +63,8 @@
     text-transform: uppercase;
 
 }
+
+.container__botao{
+    display: none;
+}
+
