--- a/style.css
+++ b/style.css
@@ -1,17 +1,22 @@
 @import url("style/header.css");
+@import url(style/banner.css);
 
 
 :root{
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
     --fonte-primaria: "Poppins", sans-serif;
-    --cor-primaria: #EB9B00;
+    --cor-laranja:#EB9B00;
     --azul-gradiente: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
     
 }
 
 body{
+    font-family: var(--fonte-primaria);
     background-color: var(--cor-de-fundo);
+    font-size: 1em;
+    color: var(--azul-gradiente);
+    font-weight: 400;
 }
 
 
