--- a/style/banner.css
+++ b/style/banner.css
@@ -17,18 +17,37 @@
 }
 
 .banner__pesquisa{
+    font-size: 0,875em;
+    background-color:transparent;
+    
+    border: 1px solid var(--branco);
+    border-radius: 24px;
+    color: #fff;
+    
+    padding: 1em;
+    width: 100%;
+    height: 44px;
+    
+}
+
+.banner__pesquisa::placeholder{
     font-family: var(--fonte-primaria);
     font-weight: 400;
-    font-size: 0,875em;
-    background: none;
-    color: #fff;
-    text-align: right;
+    text-align: center;
+    color: var(--branco);
+    background: url("../img-mobile_first/Lupa.svg") no-repeat;
+    background-position: 1em;
+}
 
-    border: 1px solid #fff;
-    border-radius: 24px;
-    
-    padding: 10px 24px;
-    width: 80vw;
-    height: 44px;
+.xxx{
+    display: block;
+    background-color: var(--branco);
+}
 
+.xxx__titulo{
+    font-weight: 700;
+    font-size: 1,125em;
+    text-align: center;
+    color: var(--cor-laranja);
+    padding: 1.5em;
 }
