Adicionado opção card

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --branco: #FFFFFF;
     --fonte-primaria: "Poppins", sans-serif;
     --cor-laranja:#EB9B00;
+    --cor-azul: #002F52;
     --azul-gradiente: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
     
 }
