--- a/style/carrossel.css
+++ b/style/carrossel.css
@@ -1,7 +1,6 @@
 
 
 .carrossel__titulo{
-    margin: 0 0 0.5em 0 ;
     background-color: var(--branco); 
     font-weight: 700;
     font-size: 1,125em;
@@ -24,4 +23,64 @@
 .swiper-pagination{
     position: initial;
     margin: 0.5em 0;
+}
+
+.card{
+    border-radius: 10px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    background: #fff;
+    margin: 1em;
+    padding: 1em;
+}
+
+.card__descricao{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+
+}
+
+.descricao__titulo{
+    color: var(--cor-laranja);
+    font-weight: 700;
+
+}
+.descricao__titulo-livro{
+    font-weight: 700;
+    font-size: 1,125em;
+    color: var(--cor-azul);
+    margin: 0.5em 0;
+
+
+}
+.descricao__texto{
+    font-size: 0,875em;
+}
+
+.card__botoes{
+    display: flex;
+    justify-content: space-between;
+}
+
+.botoes{
+    display: flex;
+}
+
+.botoes__item{
+    margin: 0 0.5em;
+}
+
+.botoes__ancora{
+    background-color: var(--cor-laranja);
+    padding: 1em 2em ;
+    width: 6em;
+    height: 1em;
+    /* margin: 1em 0; */
+
+    text-align: center;
+    font-weight: 700;
+    color: var(--branco);
+    text-decoration: none;
+
+
 }
