--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url(style/banner.css);
 @import url(style/carrossel.css);
 @import url(style/topicos.css);
+@import url(style/contato.css);
 
 
 :root{
