Projeto celular finalizado e revisado

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 @import url(style/carrossel.css);
 @import url(style/topicos.css);
 @import url(style/contato.css);
+@import url(style/footer.css);
 
 
 :root{
