Inicio do código Tablet (1024)

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
     --fonte-primaria: "Poppins", sans-serif;
+    --fonte-logo: "Josefin Sans", sans-serif; 
     --cor-laranja:#EB9B00;
     --cor-azul: #002F52;
     --azul-gradiente: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
