--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     --cor-laranja:#EB9B00;
     --cor-azul: #002F52;
     --azul-gradiente: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
+    --preto: #000000;
     
 }
 
