--- a/style/banner.css
+++ b/style/banner.css
@@ -39,3 +39,30 @@
     background-position: 1em;
 }
 
+@media screen and (min-width: 1024px) {
+    .banner{
+        background: var(--azul-gradiente);
+        color: var(--branco);
+        text-align: center;
+        padding: 6em 2em;
+    }
+    
+    .banner__titulo{
+      font-size: 2.25em;
+    }
+    
+    .banner__texto{
+
+        padding: 1em;
+
+    }
+    .banner__pesquisa{
+        font-size: 1em;
+        width: 50%;
+        height: 56px;
+
+        
+    }
+
+}
+
