--- a/style/header.css
+++ b/style/header.css
@@ -117,4 +117,12 @@
     .cabecalho__menu-hamburguer{
         display: none;
     }
+
+    .opçoes__botao:checked~.lista-menu{
+        display: block;
+        width: auto;
+    }
+    .opçoes__botao{
+        display: none;
+    }
 }
