--- a/style/carrossel.css
+++ b/style/carrossel.css
@@ -91,19 +91,23 @@
         padding: 2em 0 0.5em 0;
 
     }
-    .swiper-slide img {
-        display: block;
+    .swiper {
         width: 70%;
 
     }
 
     .swiper-pagination{
-        margin: 3em;
+        margin: 2em 0 3em 0;
     }
-
-    .card{
-         margin: 4em 12em;
-        padding: 1em;
+    
+    .swiper-button-prev, .swiper-button-next{
+        display: block;
+        top: 60%;
     }
-
+    
+        .card{
+            margin: 2em auto;
+            width: 50%;
+        }
+    
 }
