--- a/style/topicos.css
+++ b/style/topicos.css
@@ -41,3 +41,22 @@
     font-size: 0,875em;
     padding: 1em;
 } 
+
+@media screen and (min-width: 1024px) {
+    .topicos__titulo{
+
+        font-size: 1.5em;
+
+    }
+    
+    .topicos__lista{
+    width: 75%;
+    margin: 1.5em auto;
+    }
+
+
+    .topicos__link{
+        font-size: 1.5em;
+
+    } 
+}
