--- a/style/footer.css
+++ b/style/footer.css
@@ -9,3 +9,48 @@ hr {
 .rodape__titulo{
    padding: 1em;
 }
+
+.rodape__coluna{
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+
+    .rodape{
+        background-color: var(--fundo-cinza);
+        display: flex;
+    }
+
+.rodape__titulo{
+    font-size: 1.5em;
+}
+.rodape__coluna{
+    display: block;
+    margin: 0 0 2em 0;
+
+}
+.rodape__coluna_cabecalho{
+    font-size: 0.875em;
+    color: var(--fonte-footer);
+    margin: 1.5em;
+    text-transform: uppercase;
+    
+}
+
+.rodape__coluna_item{
+    display: flex;
+    margin: 1em 2.5em;
+    font-size: 0.875em;
+    align-items: center;
+}
+
+
+.rodape__coluna_link {
+    text-decoration: none;
+    color: var(--fonte-footer-link);
+    padding: 0 1em;
+
+
+}
+
+}
