--- a/style/footer.css
+++ b/style/footer.css
@@ -19,6 +19,7 @@ hr {
     .rodape{
         background-color: var(--fundo-cinza);
         display: flex;
+        justify-content: space-around;
     }
 
 .rodape__titulo{
@@ -26,7 +27,7 @@ hr {
 }
 .rodape__coluna{
     display: block;
-    margin: 0 0 2em 0;
+    /* margin: 0 0 2em 0; */
 
 }
 .rodape__coluna_cabecalho{
@@ -39,9 +40,9 @@ hr {
 
 .rodape__coluna_item{
     display: flex;
+    align-items: center;
     margin: 1em 2.5em;
     font-size: 0.875em;
-    align-items: center;
 }
 
 
