--- a/style/carrossel.css
+++ b/style/carrossel.css
@@ -111,3 +111,49 @@
         }
     
 }
+
+@media screen and (min-width: 1728px) {
+
+    .banner{
+        padding: 6em 0;
+    }
+    .banner__pesquisa{
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 12em;
+    }
+
+}
+
+
+@media screen and (min-width: 1728px) {
+    .carrossel__container{
+        display: flex;
+        margin: 0 20vw 3em 20vw;
+    }
+
+    .swiper-pagination{
+        margin: 1em 0;
+    }
+
+    .swiper{
+        width: 50%;
+
+    }
+
+    .descricao__titulo{
+        font-size: 2em;
+    }
+    .descricao__texto{
+        font-size: 1em;
+    }
+    .descricao{
+        margin-right: 2em;
+    }
+    .card{
+        width: 50%;
+        margin-left: 3em;
+    }
+}
